hphp/hack/test/typecheck/visibilities/read_before_init_inherited_properties.php.exp
File "read_before_init_inherited_properties.php", line 35, characters 5-9:
Typing error (Typing[4053])
  File "read_before_init_inherited_properties.php", line 35, characters 12-22:
  No property `unknownProp` in `ChildCls`
  File "read_before_init_inherited_properties.php", line 26, characters 13-15:
  Did you mean `defaultInChild` instead?
  File "read_before_init_inherited_properties.php", line 21, characters 7-14:
  This is why I think it is an object of type ChildCls
  File "read_before_init_inherited_properties.php", line 21, characters 7-14:
  Declaration of `ChildCls` is here
File "read_before_init_inherited_properties.php", line 16, characters 12-25:
Read access to `$this->defaultInChild` before initialization (Typing[4083])
File "read_before_init_inherited_properties.php", line 37, characters 12-25:
Read access to `$this->withoutDefault` before initialization (Typing[4083])
